@@ -7,9 +7,13 @@ import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Page; 
+import java.util.List;
 import ale.stefanini.taskmanager.taskservice.domain.models.Task;
 import ale.stefanini.taskmanager.taskservice.domain.ports.out.TaskRepositoryPort;
 import ale.stefanini.taskmanager.taskservice.infrastructure.mappers.TaskPersistenceMapper;
+import ale.stefanini.taskmanager.taskservice.domain.models.PaginatedResponse;
 import lombok.RequiredArgsConstructor;
 
 @Component
@@ -33,10 +37,20 @@ public class TaskPersistenceAdapter implements TaskRepositoryPort {
     }
 
     @Override
-    public List<Task> findAll() {
-        return jpaTaskRepository.findAll().stream()
+    public PaginatedResponse<Task> findAll(int page, int size) {
+        var pageable = PageRequest.of(page, size);
+        Page<TaskEntity> entityPage = jpaTaskRepository.findAll(pageable);
+        List<Task> domainTasks = entityPage.getContent().stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PaginatedResponse<>(
+                domainTasks,
+                entityPage.getTotalElements(),
+                entityPage.getTotalPages(),
+                entityPage.getNumber(),
+                entityPage.getSize()
+        );
     }
 
     @Override
